--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMZO0pr8QnihXSH31W1m1J+",
+      "mount_file_id": "https://github.com/SRINIRAGZ/sentimentAnalysis/blob/main/SentimentAnalysis.ipynb",
+      "authorship_tag": "ABX9TyPLOTj0D0lbLdMKEdmznQci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +31,58 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Clone the git repo"
+      ],
+      "metadata": {
+        "id": "Cf9v_nBWQs1U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from getpass import getpass\n",
+        "\n",
+        "# Securely ask for GitHub token\n",
+        "token = getpass(\"Enter your GitHub token: \")\n",
+        "!git clone https://{token}@github.com/SRINIRAGZ/sentimentAnalysis.git"
+      ],
+      "metadata": {
+        "id": "ZN6u5RpILCka",
+        "outputId": "49cb6ed8-fcf9-4ba7-a26c-fb763c8f1c75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your GitHub token: ··········\n",
+            "Cloning into 'sentimentAnalysis'...\n",
+            "remote: Enumerating objects: 15, done.\u001b[K\n",
+            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 15 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (15/15), 19.13 KiB | 9.56 MiB/s, done.\n",
+            "Resolving deltas: 100% (2/2), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Installation of libraries"
+      ],
+      "metadata": {
+        "id": "zraEa_5MIRQG"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -39,6 +92,104 @@
       "source": [
         "!pip install transformers torch"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "lFA94nB-Iu_u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##PArams\n",
+        "filename = ''\n",
+        "DataFolder = './SentimentAnalysis/data/{filename}'\n",
+        "ResultsFolder = './SentimentAnalysis/results/{filename}'"
+      ],
+      "metadata": {
+        "id": "m3K9qhJyKTi8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Import"
+      ],
+      "metadata": {
+        "id": "4vCCQZcxI4qM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6fD-nERUI3PV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Cleaning"
+      ],
+      "metadata": {
+        "id": "JO3tw2VHI7p2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data PreProcessing"
+      ],
+      "metadata": {
+        "id": "6Xqc6Nm-I_F_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sentiment Analysis"
+      ],
+      "metadata": {
+        "id": "6fBPEkdlJFiG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summarization"
+      ],
+      "metadata": {
+        "id": "rNvr5OVVJQ-o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Results export"
+      ],
+      "metadata": {
+        "id": "jZELIZ0uJTYC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Final Plots"
+      ],
+      "metadata": {
+        "id": "Il-d-YtNJXb6"
+      }
     },
     {
       "cell_type": "code",
